# bedrock-core

./: .env.example  .gitignore  BACKEND_INTEGRATION.md  DASHBOARD_BUILD.md  DASHBOARD_V2_GUIDE.md  IMPLEMENTATION_SUMMARY.md  README.md  TASK4_IMPLEMENTATION_SUMMARY.md  TASK4_V2_IMPROVEMENTS.md  TEST_RESULTS.md  TOOL_API_SURFACE.md  UI_DESIGN_IDEAS.md  app.py  config.yaml  options_scanner.py  pyproject.toml  run-ui.sh  test_risk_gate.py  tools.py
agent/: Dockerfile  app.py  correlation_gate.py  event_loader.py  market_checks.py  market_data.py  options_scanner.py  orchestrator.py  reason_codes.py  requirements.txt  risk_engine.py  tools.py  verify_setup.py  vol_engine.py
cdk/: app.py  build_trigger.py  cdk.json  stack.py
db/: __init__.py  models.py  seed.py
docs/: UI_ANALYSIS.md
hedge-desk-console-v2/: App.tsx  README.md  constants.ts  index.html  metadata.json  package.json  types.ts
tests/: test_candidate_enrichment.py  test_db_models.py  test_entrypoint.py  test_event_loader.py  test_market_checks_phase2.py  test_options_scanner.py  test_options_scanner.py.skip  test_orchestrator_pipeline.py  test_phase2_task1_risk_gate.py  test_phase2_task2_vol_regime_routing.py  test_phase2_task3_event_blocking.py  test_phase2_task4_correlation_gate.py  test_phase2_task6_tools_api.py  test_portfolio_risk.py  test_reason_codes.py  test_risk_engine.py  test_server_scan_response.py  test_tools.py  test_trade_execute.py  test_ui_server.py  test_vol_engine.py
ui-aistudio/: App.tsx  README.md  USER_WALKTHROUGH.md  constants.ts  dashboard-v2-light.css  dashboard-v2-phase2.css  (+8 more)
(+41 files in other folders)
