[project]
name = "bedrock-agent-core"
version = "2026.1.0"
requires-python = ">=3.13"
dependencies = [
    "strands-agents>=1.25.0,<2.0",
    "strands-agents-tools",
    "bedrock-agentcore>=1.3.0,<2.0",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "bedrock-agentcore-starter-toolkit>=0.2.10",
    "pytest>=8.0",
]
