[project]
name = "bedrock-agent-core"
version = "2026.1.0"
requires-python = ">=3.10"
dependencies = [
    "strands-agents>=1.25.0,<2.0",
    "strands-agents-tools",
    "bedrock-agentcore>=1.3.0,<2.0",
    "python-dotenv",
    "yfinance>=0.2.0",
    "scipy>=1.10.0",
    "pandas>=1.5.0",
]

[tool.setuptools]
py-modules = ["app", "tools", "options_scanner"]

[dependency-groups]
dev = [
    "bedrock-agentcore-starter-toolkit>=0.2.10",
    "pytest>=8.0",
]
