[project]
name = "bedrock-agent-core"
version = "2026.1.0"
requires-python = ">=3.10"
dependencies = [
    "strands-agents>=1.25.0,<2.0",
    "strands-agents-tools",
    "bedrock-agentcore>=1.3.0,<2.0",
    "python-dotenv",
    "yfinance>=0.2.0",
    "scipy>=1.10.0",
    "pandas>=1.5.0",
    "aws-cdk-lib>=2.238.0",
    "constructs>=10.4.5",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "lxml>=6.0.2",
    "sqlalchemy>=2.0.46",
]

[tool.setuptools]
py-modules = ["app", "tools", "options_scanner"]

[dependency-groups]
dev = [
    "bedrock-agentcore-starter-toolkit>=0.2.10",
    "pytest>=8.0",
    "httpx>=0.27.0",
]
